@startuml

class GetBookActivity{
    + execute(GetBookRequest request) : GetBookResponse
}

class RemoveBookFromCatalogActivity {
    + execute(RemoveBookFromCatalogRequest request) : RemoveBookFromCatalogResponse
    }
class SubmitBookForPublishingActivity{
    + execute(SubmitBookForPublishingRequest request) : SubmitBookForPublishingResponse
}
class RecommendationsServiceClient {
    + execute(GetBookRequest request) : GetBookResponse
}
class CatalogItemVersion {
    -@DynamoDBHashKey bookId : String
    -@DynamoDBRangeKey version : int
    -inactive : boolean
    - author : String
    - text : String
    - genre : BookGenre
}
class PublishingStatusItem {
    -@DynamoDBHashKey publishingRecordId : String
    -@DynamoDBRangeKey status : PublishingRecordStatus
    -statusMessage : String
    -bookId : String
}
class CatalogDao {
    dynamoDBMapper : DynamoDBMapper
}


class PublishingStatusDao {
     dynamoDBMapper : DynamoDBMapper
}
class BookNotFoundException {}

GetBookActivity *-- CatalogDao
GetBookActivity *-- RecommendationsServiceClient
SubmitBookForPublishingActivity *-- PublishingStatusDao

CatalogItemVersion *-- CatalogDao
PublishingStatusItem *-- PublishingStatusDao
CatalogDao *-- BookNotFoundException


@enduml